<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical"
>

    <include layout="@layout/include_header_layout" />

    <include layout="@layout/include_tip_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24px">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/iv_phone_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/phone_icon" />

            <TextView
                android:id="@+id/tv_phone_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_phone_icon"
                android:text="@string/phone_num"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_phone_text"
                android:background="@null"
                android:hint="@string/please_input_phone_num"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_old_password_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/iv_verification_code_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/verification_code_icon" />

            <TextView
                android:id="@+id/tv_verification_code_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_verification_code_icon"
                android:text="@string/verification_code"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <com.example.asus.customer.weight.DownTimerButton
                android:id="@+id/btn_verification_code"
                android:layout_width="150px"
                android:layout_height="44px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_btn_sub"
                android:text="@string/get_verification_code"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_m" />

            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/btn_verification_code"
                android:layout_toRightOf="@id/tv_verification_code_text"
                android:background="@null"
                android:hint="@string/please_input_verification_code"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_verification_code_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/iv_new_password_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/new_password_icon" />

            <TextView
                android:id="@+id/tv_new_password_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_new_password_icon"
                android:text="@string/new_password"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_new_password_text"
                android:background="@null"
                android:hint="@string/please_input_password_again"
                android:inputType="textPassword"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_new_password_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/iv_confirm_password_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/password_icon" />

            <TextView
                android:id="@+id/tv_confirm_password_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_confirm_password_icon"
                android:text="@string/confirm_password"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_confirm_password_text"
                android:background="@null"
                android:hint="@string/please_input_password_again"
                android:inputType="textPassword"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_confirm_password_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="120px"
            android:background="@drawable/selector_btn_sub"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="34px" />

    </LinearLayout>

</LinearLayout>
