<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical">
    <include layout="@layout/include_header_layout"></include>

    <RelativeLayout
        android:id="@+id/rl_head_portrait"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_head_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24px"
            android:text="@string/head_portrait"
            android:textColor="@color/colorBlackLight"
            android:textSize="30px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24px"
            android:src="@mipmap/arrow_left" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="24px"
        android:layout_marginRight="24px"
        android:background="@color/colorLine" />
    <RelativeLayout
        android:id="@+id/rl_mobile"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="1px"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24px"
            android:text="@string/mobile_phone"
            android:textColor="@color/colorBlackLight"
            android:textSize="30px" />

        <TextView
            android:id="@+id/tv_mobile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24px"
            android:textColor="@color/colorGrayDark"

            android:textSize="30px" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="24px"
        android:layout_marginRight="24px"
        android:background="@color/colorLine" />
    <RelativeLayout
        android:id="@+id/rl_mailbox"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="1px"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_mailbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24px"
            android:text="@string/mailbox"
            android:textColor="@color/colorBlackLight"
            android:textSize="30px" />

        <TextView
            android:id="@+id/tv_mobile_mailbox_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24px"
            android:textColor="@color/colorGrayDark"
            android:textSize="30px" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="24px"
        android:layout_marginRight="24px"
        android:background="@color/colorLine" />
    <RelativeLayout
        android:id="@+id/rl_wechat"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="1px"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24px"
            android:text="@string/wechat"
            android:textColor="@color/colorBlackLight"
            android:textSize="30px" />

        <TextView
            android:id="@+id/tv_wechat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24px"
            android:textColor="@color/colorGrayDark"
            android:textSize="30px" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="24px"
        android:layout_marginRight="24px"
        android:background="@color/colorLine" />
    <RelativeLayout
        android:id="@+id/rl_qr_code"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24px"
            android:text="@string/qr_code"
            android:textColor="@color/colorBlackLight"
            android:textSize="30px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24px"
            android:src="@mipmap/arrow_left" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="24px"
        android:layout_marginRight="24px"
        android:background="@color/colorLine" />
</LinearLayout>