<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".activity.AddZhanghuActivity">

    <include layout="@layout/include_header_layout"></include>

    <!--账户昵称-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px">

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="130px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_toRightOf="@id/iv_phone_icon"
            android:text="@string/phone_num"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text_size_l"
            android:visibility="gone" />

        <EditText
            android:id="@+id/ed_zhanghu_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_toRightOf="@id/tv_phone_text"
            android:background="@null"
            android:ems="10"
            android:hint="请输入账户昵称"
            android:maxLength="11"
            android:textColor="@color/colorBlackLight"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_size_l" />

        <TextView
            android:id="@+id/tv_old_password_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_input_line"
            android:enabled="false" />

    </RelativeLayout>

    <!--新手机号码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px">

        <EditText
            android:id="@+id/ed_bindNewPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:background="@null"
            android:ems="10"
            android:hint="请输入您想要绑定改的新手机号码"
            android:maxLength="11"
            android:textColor="@color/colorBlackLight"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_size_l" />

        <TextView
            android:id="@+id/ed_bindNewPhone_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_input_line"
            android:enabled="false" />

    </RelativeLayout>

    <!--验证码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px">

        <TextView
            android:id="@+id/tv_verification_code_text"
            android:layout_width="130px"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_toRightOf="@id/iv_verification_code_icon"
            android:text="@string/verification_code"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text_size_l"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_verification_code"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_btn_sub"
            android:text="@string/get_verification_code"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_toLeftOf="@id/btn_verification_code"
            android:layout_toRightOf="@id/tv_verification_code_text"
            android:background="@null"
            android:hint="@string/please_input_verification_code"
            android:textColor="@color/colorBlackLight"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_size_l" />

        <TextView
            android:id="@+id/tv_verification_code_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_input_line"
            android:enabled="false" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:layout_marginTop="20px"
            android:text="提示：添加账号仅方便多人监控项目"
            android:textColor="@color/colorGray"
            android:textSize="26px" />

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="40px"
            android:layout_marginTop="120px"
            android:background="@drawable/selector_btn_sub"
            android:text="确认更换"
            android:textColor="@color/colorWhite"
            android:textSize="34px" />

    </RelativeLayout>

</LinearLayout>